<resources>
    <string name="app_name">ChartalApplication</string>
    <string name="name_author1">Robert Downey Jr.</string>
    <string name="name_author2">Chris Evans</string>
    <string name="name_author3">Mark Ruffalo</string>
    <string name="name_author4">Chris Hemsworth</string>
    <string name="movie_description">Action, Adventure, Fantasy</string>
    <string name="movie_review">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="details">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe. </string>
    <string name="cast">Cast</string>
    <string name="age">13+</string>
    <string name="back">Back</string>
    <string name="movie_title">Avengers:\nEnd Game</string>
    <string name="tv_movies_list_text">Movies list</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="fr_tv_age_text">13+</string>
    <string name="tv_time">137 MIN</string>
    <string name="fr_tv_movie_description">Action, Adventure, Drama</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="want_to_save">Want to save a movie to your favorites?</string>
    <string name="want_to_delete">Want to delete a movie from your favorites?</string>
    <string name="collection_is_empty">Your movie collection is empty. You can always add the selected movie to your collection.</string>
    <string name="chartal_channel_name">My Channel</string>
    <string name="chartal_channel_description">Channel of chartalApplication</string>
    <string name="new_movie_in_the_database">New movie in the database</string>
    <string name="movie_with_highest_rating"> Movie with highest rating</string>
    <string name="Do_you_wanna_to_schedule">Do you wanna to schedule a movie viewing?</string>
    <string name="fragment_gallery_transition_name">fragment gallery transition name</string>
    <string name="fragment_details_transition_name">fragment details transition name</string>





</resources>