<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true">


    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="@drawable/maks_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/movie1_big" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_height"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="@id/iv_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="@dimen/fab_max_image_size" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_back_margin_start"
        android:layout_marginTop="@dimen/tv_back_margin_top"
        android:gravity="top"
        android:text="@string/back"
        android:textColor="@color/tv_back_textColor"
        android:textSize="@dimen/tv_back_textSize"
        app:drawableStartCompat="@drawable/ic_path"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_permission"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/tv_back_margin_start"
        android:layout_marginTop="@dimen/tv_back_margin_top"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_effect"
        android:src="@drawable/ic_baseline_access_alarm_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tv_age_margin_bottom"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_age_textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_movie_title"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/movie_title"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/storyline"
        android:textSize="@dimen/tv_movie_title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_movie_description"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />


    <TextView
        android:id="@+id/tv_movie_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tv_movie_description_margin_top"
        android:text="@string/movie_description"
        android:textColor="@color/tv_MovieDescription"
        android:textSize="@dimen/tv_MovieDescription_textSize"
        app:layout_constraintBottom_toTopOf="@id/rating_bar"
        app:layout_constraintStart_toEndOf="@id/guideline_start" />


    <TextView
        android:id="@+id/fr_tv_movie_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_MovieReview_marginStart"
        android:gravity="center"
        android:text="@string/movie_review"
        android:textColor="@color/movie_review"
        app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
        app:layout_constraintStart_toEndOf="@id/rating_bar"
        app:layout_constraintTop_toTopOf="@+id/rating_bar" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:numStars="5"
        android:rating="4"
        android:theme="@style/MyRatingBar"
        app:layout_constraintBottom_toTopOf="@id/tv_storyline"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <TextView
        android:id="@+id/tv_storyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/storyline"
        android:textColor="@color/storyline"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal3">

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/details"
            android:textColor="@color/movie_details"
            android:textSize="@dimen/tv_details_text_size" />

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/cast"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast"
        tools:listitem="@layout/actor_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_dialog"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_height"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>