<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:padding="6dp">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_card_view_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <ImageView
        android:id="@+id/fr_iv_poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:foreground="@drawable/mask"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"/>

    <ImageView
        android:id="@+id/iv_baseline_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iv_baseline_favorite_margin_top"
        android:layout_marginEnd="@dimen/iv_baseline_favorite_margin_end"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_age"
        android:layout_width="@dimen/card_veiw_age_width"
        android:layout_height="@dimen/card_veiw_age_height"
        android:layout_marginStart="@dimen/card_view_margin_start"
        android:layout_marginTop="@dimen/card_view_margin_top"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fr_tv_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/background"
            android:paddingTop="@dimen/fr_tv_age_padding_top"
            android:paddingBottom="@dimen/fr_tv_age_padding_top"
            android:text="@string/fr_tv_age_text"
            android:textColor="@color/movie_details"
            android:textSize="@dimen/fr_tv_age_text_size" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/tv_avengers_margin_top"
        android:layout_marginEnd="@dimen/margin_s"
        android:text="@string/avengers_end_game"
        android:textColor="@color/storyline"
        android:textSize="@dimen/tv_avengers_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/fr_tv_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_card_view_horizontal"
        tools:src="@tools:sample/cities"/>

    <TextView
        android:id="@+id/fr_tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_t"
        android:text="@string/tv_time"
        android:textColor="@color/tv_time"
        android:textSize="@dimen/tv_time_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/fr_tv_movie_description"
        android:layout_width="wrap_content"


        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:text="@string/fr_tv_movie_description"
        android:textColor="@color/tv_MovieDescription"
        android:textSize="@dimen/text_size_min"
        app:layout_constraintBottom_toTopOf="@id/fr_rating_bar"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/fr_rating_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_s"
        android:numStars="5"
        android:rating="4"
        android:theme="@style/MyRatingBar"
        app:layout_constraintBottom_toTopOf="@id/gl_card_view_horizontal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fr_tv_movie_review"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/movie_review"
        android:textColor="@color/movie_review"
        android:textSize="@dimen/text_size_min"
        app:layout_constraintBottom_toBottomOf="@id/fr_rating_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fr_rating_bar"
        app:layout_constraintTop_toTopOf="@id/fr_rating_bar" />



</androidx.constraintlayout.widget.ConstraintLayout>